Documenta endpoints do StateController
